--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   font-family: Quattrocento Sans;
 }
 
-/* HEADER */
+/*///////////////// HEADER /////////////////*/
 
 #header {
   width: 100%;
@@ -27,10 +27,10 @@ body {
   color: white;
   text-shadow: 2px 2px #000;
   position: absolute;
-  left: 39%;
+  left: 35%;
 }
 
-/* MAIN IMAGE AND CAPTION */
+/*///////////////// MAIN IMAGE AND CAPTION /////////////////*/
 
 #full {
   width: 850px;
@@ -88,33 +88,38 @@ body {
 
 #divider {
   margin: auto;
-  margin-top: 35%;
+  margin-top: 40%;
   border: 0;
   height: 2px;
   width: 60%;
   display: block;
   background-image: linear-gradient(to right, #b5c4c7, #36392a);
-  margin-bottom: 110px;
+  margin-bottom: 100px;
 }
 
-/*// BOTTOM HALF OF PAGE //*/
+/*///////////////// BOTTOM HALF OF PAGE ////////////////*/
 
 #bottomHalf {
-width: 870px;
+width: 850px;
 margin: auto;
 }
 
 .form {
   float: left;
-  width: 350px;
+  width: 370px;
 }
 
+.description {
+  float: right;
+  width: 400px;
+  border: 1px solid black;
+}
 
-
-/* FORM */
+/*///////////////// FORM /////////////////*/
 
 .form {
 border: 1px solid black;
+margin-bottom: 50px;
 }
 
 #formHeader {
@@ -133,14 +138,18 @@ border: 1px solid black;
 }
 
 input {
-  /*font-size: 16px;*/
   font-family: Quattrocento Sans;
-  width: 70px;
+  width: 80px;
 }
 
 #firstName {
   margin-right: 3%;
   margin-top: 6%;
+  font-size: 16px;
+}
+
+#lastName {
+  font-size: 16px;
 }
 
 #labelFirst {
@@ -154,15 +163,16 @@ input {
 }
 
 #emailInput {
-  width: 40%;
+  width: 50%;
+  font-size: 16px;
 }
 
 #formDivider {
   margin: auto;
   margin-top: 10%;
   border: 0;
-  height: 2px;
-  width: 90%;
+  height: 1px;
+  width: 80%;
   display: block;
   background-image: linear-gradient(to right, #b9c4c3, #909e69);
 }
@@ -203,4 +213,10 @@ input {
   transition:.9s;
   border: 1px solid black;
   color: black;
+}
+
+/*///////////////// DESCRIPTION /////////////////*/
+
+.description h2:before {
+  content: "\274B";
 }
